[package]
name = "embassy-interrupt-executor-problem"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-rp = { version = "0.1.0", features = [
    "defmt",
    "time-driver",
    "critical-section-impl",
    "intrinsics",
    "rom-v2-intrinsics",
] }
embassy-executor = { version = "0.5.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
    "nightly",
] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embedded-hal-bus = { version = "0.1.0", features = ["async"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
pio = "0.2.1"
pio-proc = "0.2.2"
defmt = "0.3.7"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
static_cell = "2.1.0"
portable-atomic = { version = "1.6.0", features = ["critical-section"] }
fixed = "1.27.0"
lsm6ds3tr = { git = "https://github.com/avsaase/lsm6ds3tr", rev = "24792cefd277814ef775aae88063f6699ceb8bdc", features = [
    "defmt",
] }
assign-resources = "0.4.1"

[patch.crates-io]
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "e3e3728daeab7115df58def6af7405100c82c011" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "e3e3728daeab7115df58def6af7405100c82c011" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "e3e3728daeab7115df58def6af7405100c82c011" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "e3e3728daeab7115df58def6af7405100c82c011" }

